Fixed psql column type error
